test/should-fail/vsgc1258.f3
/*
 * Regress test for VSGC-1258.
 * 
 * Assertion Error thrown by Compiler 
 * when trying to override attribute of 
 * the same class.

 * Should not be able to override var of
 * current class - only super type should
 * be allowed.
 *
 * @test/compile-error
 */

class VSGC1258 {
    var myvar : String = "default value";

    override var myvar on replace {
        println("myvar is changed!");
    }
} 

VSGC1258 { myvar: "new value" }
